Bug 1654323 - Use GtkTextView.text.selection to get selection colors in GTK. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D84814