widget/gtk/nsLookAndFeel.cpp
@@ -1130,6 +1130,7 @@ void nsLookAndFeel::EnsureInit() {
   mFieldText = GDK_RGBA_TO_NS_RGBA(color);
 
   // Selected text and background
+  style = GetStyleContext(MOZ_GTK_TEXT_VIEW_TEXT_SELECTION);
   gtk_style_context_get_background_color(
       style,
       static_cast<GtkStateFlags>(GTK_STATE_FLAG_FOCUSED |
